<resources>
    <string name="app_name">GestCo</string>
    <string name="Registro">Registro</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registro">Formulario de Registro</string>
    <string name="crearCuenta">Crear una Cuenta</string>
    <string name="conectar">CONECTAR</string>
    <string name="registrars">REGISTRARSE</string>
    <string name="Salir">Salir</string>
    <string name="salir">Cerrar Sesión</string>
    <string name="title_activity_lista_compra">listaCompra</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="añadir">Añadir\n</string>
    <string name="Añadir">Añadir</string>
    <string name="volver">Volver</string>
    <string name="comida">Comida</string>
    <string name="cena">Cena</string>
    <string name="guardar">Guardar</string>
    <string name="volver1">Volver</string>
    <string name="nevera">Lista de alimentos en la Nevera</string>
    <string name="Nevera">Lista de alimentos en la Nevera</string>
    <string name="volverRegistro">Volver</string>
    <string name="caducidad">Comprobar Caducidad</string>
    <string name="Registrarse">Registrarse</string>
    <string name="Congelador">Lista de alimentos en el Congelador</string>
    <string name="volver2">Volver</string>
    <string name="AñadirCongelador">Añadir</string>
    <string name="Despens">Lista de alimentos en la Despensa</string>
    <string name="Volver3">Volver</string>
    <string name="AñadirDespensa">Añadir</string>
    <string name="caducidad1">Caducidad</string>
    <string name="neveraa">Nevera</string>
    <string name="congeladorr">Congelador</string>
    <string name="Despensa">Despensa</string>
</resources>