<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context=".Nevera">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/neveraa"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/listNevera"
            android:layout_width="match_parent"
            android:layout_height="382dp"
            android:background="#FFFEFE" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextNevera"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Inserta un Alimento"
                android:maxLength="20"
                android:inputType="text" />

            <Button
                android:id="@+id/btAñadirNevera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#00BCD4"
                android:onClick="onClick"
                android:text="@string/Añadir"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextDateNevera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:clickable="false"
                android:ems="10"
                android:hint="Inserta Caducidad"
                android:inputType="date" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btVolverNevera"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#00BCD4"
                android:onClick="onClick"
                android:text="@string/volver"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btComprobarCaducidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#00BCD4"
                android:onClick="onClick"
                android:text="@string/caducidad1"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/dibuabajo2"
            app:srcCompat="@drawable/dibuabajo2" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>