<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registrarse">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="134dp"
            android:gravity="center"
            android:text="@string/registro"
            android:textSize="32dp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="202dp"
            android:backgroundTint="#FDFEF9"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/formulario222" />

        <EditText
            android:id="@+id/editTextUser2"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="User Name"
            android:inputType="text"
            android:maxLength="20" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:maxLength="20" />

        <Button
            android:id="@+id/btRegistrarse"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#00BCD4"
            android:onClick="onClick"
            android:text="@string/Registrarse"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btVolverRegistro"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#5C888A8A"
            android:onClick="onClick"
            android:text="@string/volverRegistro"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>