<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context=".ListaComidas">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00BCD4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="30dp"
                android:layout_height="46dp"
                android:layout_weight="1"
                android:gravity="center|right"
                android:text="@string/comida"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cena"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=" Lunes"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etLunesComida"
                android:layout_width="205dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:ems="10"
                android:maxLength="20"
                android:inputType="text" />

            <EditText
                android:id="@+id/etLunesCena"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:ems="10"
                android:maxLength="20"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E6F9FF"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=" Martes"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etMartesComida"
                android:layout_width="205dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:ems="10"
                android:maxLength="20"
                android:inputType="text" />

            <EditText
                android:id="@+id/etMartesCena"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:ems="10"
                android:maxLength="20"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=" Miércoles"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etMiercolesComida"
                android:layout_width="205dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:ems="10"
                android:maxLength="20"
                android:inputType="text" />

            <EditText
                android:id="@+id/etMiercolesCena"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:ems="10"
                android:maxLength="20"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E6F9FF"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=" Jueves"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etJuevesComida"
                android:layout_width="205dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:ems="10"
                android:maxLength="20"
                android:inputType="text" />

            <EditText
                android:id="@+id/etJuevesCena"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:ems="10"
                android:maxLength="20"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=" Viernes"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etViernesComida"
                android:layout_width="205dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:ems="10"
                android:maxLength="20"
                android:inputType="text" />

            <EditText
                android:id="@+id/etViernesCena"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:ems="10"
                android:maxLength="20"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E6F9FF"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=" Sábado"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etSabadoComida"
                android:layout_width="205dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:ems="10"
                android:maxLength="20"
                android:inputType="text" />

            <EditText
                android:id="@+id/etSabadoCena"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:ems="10"
                android:maxLength="20"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=" Domingo"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etDomingoComida"
                android:layout_width="205dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:ems="10"
                android:maxLength="20"
                android:inputType="text" />

            <EditText
                android:id="@+id/etDomingoCena"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:ems="10"
                android:maxLength="20"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00BCD4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btVolverComidas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#00BCD4"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/volver1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#00BCD4"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/guardar"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/dibuabajo2"
            app:srcCompat="@drawable/dibuabajo2" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>